fix css on footer, remove content wrap div useless

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,12 +6,32 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* background-color: #fffff0; */
-  padding-bottom: 15px;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.App {
+  min-height: 100vh; /* will cover the 100% of viewport */
+  overflow: hidden;
+  display: block;
+  position: relative;
+  padding-bottom: 10px;
+}
+
+.footer {
+  background-color: #222;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+.footer-text {
+  text-align: center;
+  padding: 10px;
+  color: #bbb;
 }
 
 /* nav {
